# Gymforce

./: .gitignore  CONSTITUTION.md  README.md  RELEASE_NOTES.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a6e9cacd115_add_point_events_and_streaks.py  7f3b92f66cc2_add_rewards_and_redemptions.py  a3d02f9c8b12_add_badges_user_badges_push_tokens.py  b91c2f4d8eab_add_workout_sessions_and_set_logs.py  d157f937a584_add_plans_memberships_checkins_workouts.py  d7d23a53f095_create_users_table.py  e4f9b7c6a1d0_add_payments_table.py  f1a2b3c4d5e6_add_assessments_challenges_referrals.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  assessment.py  badge.py  base.py  challenge.py  checkin.py  membership.py  payment.py  plan.py  point_event.py  push_token.py  redemption.py  referral.py  reward.py  streak.py  user.py  user_badge.py  workout.py  workout_session.py
backend/app/repositories/: checkin_repo.py  user_repo.py  workout_repo.py
backend/app/schemas/: __init__.py  assessment.py  auth.py  badge.py  challenge.py  checkin.py  dashboard.py  gamification.py  notification.py  (+6 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_assessments.py  test_auth.py  test_badges.py  test_challenges.py  test_checkin.py  test_dashboard.py  test_gamification.py  test_health.py  test_notifications.py  test_payments.py  test_referrals.py  test_rewards.py  test_sessions.py  test_workouts.py
(+149 files in other folders)
